--- a/styles/index.scss
+++ b/styles/index.scss
@@ -261,8 +261,7 @@ p {
 
   border: none;
   opacity: 1;
-  backdrop-filter: blur(15px);
-  z-index: 9;
+  backdrop-filter: invert(30%);
   border-radius: 50%;
   top: 50% !important;
   display: flex !important;
