--- a/styles/about-us.scss
+++ b/styles/about-us.scss
@@ -120,20 +120,32 @@ h1.our_team_section_title {
     padding-top: 20px;
     box-shadow: 0px 4px 20px rgba(138, 138, 138, 0.15);
     border-radius: 20px;
-    height: 435px;
-    width: 290px;
+    height: 440px;
+    width: 310px;
 
-    h4.member_name.core {
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 700;
-      margin: 9px;
-    }
+    .core_member_title {
+      height: 90px;
 
-    h5.member_role.core {
-      font-size: 14px;
-      margin: 0 10px 10px 10px;
-      color: rgba(44, 45, 65, 0.5);
+      h4.member_name.core {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 700;
+        margin: 9px;
+      }
+
+      h5.member_role.core {
+        font-size: 14px;
+        margin: 0 10px 10px 10px;
+        color: rgba(44, 45, 65, 0.5);
+        height: 35px;
+      }
+
+      .core_member_break {
+        background-color: rgba(82, 143, 236, 0.25);
+        height: 2px;
+        border: none;
+        margin: 0 20px 0 20px;
+      }
     }
 
     img.profile_icon.core {
@@ -146,19 +158,12 @@ h1.our_team_section_title {
       border: 7px solid rgba(82, 143, 236, 0.25);
     }
 
-    .core_member_break {
-      background-color: rgba(82, 143, 236, 0.25);
-      height: 2px;
-      border: none;
-      margin: 0 20px 0 20px;
-    }
-
     .core_member_info {
       .member_bio {
         font-size: 14px;
-        margin: 20px 17px 20px 17px;
+        margin: 15px 20px;
         color: rgba(44, 45, 65, 0.5);
-        height: 145px;
+        height: 150px;
       }
 
       .social_btns {
@@ -674,7 +679,7 @@ button.read_more_btn:hover {
 
 .report {
   width: 310px;
-  min-width: 310px;
+  // min-width: 310px;
   height: 118px;
   background: #ffffff;
   border: 0.3px solid #b5b5b5;
