--- a/styles/about-us.scss
+++ b/styles/about-us.scss
@@ -504,9 +504,13 @@ button.read_more_btn:hover {
   background-size: 75%;
   margin-top: 50px;
 
-  .accomplishment_card {
+  .our-work-carousel {
     &:first-child {
       margin-top: -50px;
+    }
+
+    .campaignCard {
+      cursor: inherit;
     }
 
     width: 390px;
@@ -515,62 +519,9 @@ button.read_more_btn:hover {
     margin-bottom: 50px;
     font-size: 15px;
     line-height: 25px;
-    margin-top: -60px;
-
-    .accomplishment_image_card {
-      width: 100%;
-      max-width: 390px;
-      height: 240px;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
-      border-radius: 20px;
-      object-fit: cover;
-    }
-
-    .accomplishment_content_card {
-      width: 450px;
-      height: auto;
-      min-height: 250px;
-      position: absolute;
-      background: rgba(255, 255, 255, 0.85);
-      box-shadow: 0px 4px 20px rgba(138, 138, 138, 0.15);
-      backdrop-filter: blur(4px);
-      border-radius: 20px;
-      left: 50px;
-      top: 50px;
-      padding: 20px;
-
-      .title {
-        /* Bold 22 */
-        text-align: start;
-        font-family: Open Sans;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 20px;
-        line-height: 27px;
-        margin: 0px;
-        margin-bottom: 10px;
-        color: #000000;
-      }
-
-      .body {
-        font-family: Open Sans;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 21px;
-        /* or 21px */
-        text-align: start;
-        color: #2c2d41;
-        margin-bottom: 0px;
-      }
-    }
 
     &:nth-child(even) {
       margin-left: auto;
-
-      .accomplishment_content_card {
-        left: -50px;
-      }
     }
   }
 }
