--- a/styles/news-styles.scss
+++ b/styles/news-styles.scss
@@ -320,7 +320,7 @@
 .article_news {
   margin-left: auto;
   margin-right: auto;
-  width: 1000px;
+  width: 1050px;
   position: relative;
   color: #524d42;
   .article_header {
@@ -925,7 +925,7 @@
       margin-right: auto;
       display: grid;
       justify-content: center;
-      grid-template-columns: 330px 330px 330px 330px;
+      grid-template-columns: 340px 340px 340px;
       grid-gap: 15px 10px;
       margin-bottom: 20px;
     }
