--- a/styles/about-us.scss
+++ b/styles/about-us.scss
@@ -104,15 +104,10 @@ h1.our_team_section_title {
 /* CORE TEAM CARD */
 
 .core-team-members-grid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-
   .core-member-card {
     display: flex;
     flex-direction: column;
     background: #ffffff;
-    margin: 40px 20px 40px 20px;
     padding-top: 20px;
     box-shadow: 0px 4px 20px rgba(138, 138, 138, 0.15);
     border-radius: 20px;
@@ -321,7 +316,7 @@ img.our_stories_img {
 .stories_wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 h1.air_pollution_title {
@@ -502,7 +497,7 @@ button.read_more_btn:hover {
   margin-top: 50px;
 
   &::before {
-    content: "";
+    content: '';
     width: 8px;
     height: 100%;
     position: absolute;
