--- a/styles/map-styles.scss
+++ b/styles/map-styles.scss
@@ -1721,13 +1721,13 @@ input[type='radio']:checked:before {
   grid-gap: 3px 10px;
 }
 
-#recommended_advice1,
-#recommended_advice2,
-#recommended_advice3 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+// #recommended_advice1,
+// #recommended_advice2,
+// #recommended_advice3 {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+// }
 
 .other-pollutants-dropdown {
   display: flex;
@@ -1735,110 +1735,110 @@ input[type='radio']:checked:before {
   cursor: pointer;
 }
 
-.recommend_icon {
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 37px;
-  min-width: 37px;
-  height: 37px;
-  margin-right: 8px;
-}
+// .recommend_icon {
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   width: 37px;
+//   min-width: 37px;
+//   height: 37px;
+//   margin-right: 8px;
+// }
 
-.recommend_icon:first-child {
-  display: block;
-  background-position: center;
-}
+// .recommend_icon:first-child {
+//   display: block;
+//   background-position: center;
+// }
 
-.recommend_icon.mask {
-  width: 37px;
-  height: 37px;
-  background-image: url(../assets/img/recommendations-icons/wear_mask.svg);
-}
+// .recommend_icon.mask {
+//   width: 37px;
+//   height: 37px;
+//   background-image: url(../assets/img/recommendations-icons/wear_mask.svg);
+// }
 
-.recommend_icon.monitor {
-  background-image: url(../assets/img/recommendations-icons/monitor-health.svg);
-}
+// .recommend_icon.monitor {
+//   background-image: url(../assets/img/recommendations-icons/monitor-health.svg);
+// }
 
-.recommend_icon.no_mask {
-  background-image: url(#);
-}
+// .recommend_icon.no_mask {
+//   background-image: url(#);
+// }
 
-.recommend_icon.purifier {
-  width: 37px;
-  height: 37px;
-  background-image: url(../assets/img/recommendations-icons/run_airpurifier.svg);
-}
+// .recommend_icon.purifier {
+//   width: 37px;
+//   height: 37px;
+//   background-image: url(../assets/img/recommendations-icons/run_airpurifier.svg);
+// }
 
-.recommend_icon.closeWindow {
-  width: 37px;
-  height: 37px;
-  background-image: url(../assets/img/recommendations-icons/close-window.svg);
-}
+// .recommend_icon.closeWindow {
+//   width: 37px;
+//   height: 37px;
+//   background-image: url(../assets/img/recommendations-icons/close-window.svg);
+// }
 
-.recommend_icon.openWindow {
-  width: 37px;
-  height: 37px;
-  background-image: url(../assets/img/recommendations-icons/open-window.svg);
-}
+// .recommend_icon.openWindow {
+//   width: 37px;
+//   height: 37px;
+//   background-image: url(../assets/img/recommendations-icons/open-window.svg);
+// }
 
-.recommend_icon.walk {
-  width: 37px;
-  height: 37px;
-  background-image: url(../assets/img/recommendations-icons/walk.svg);
-}
+// .recommend_icon.walk {
+//   width: 37px;
+//   height: 37px;
+//   background-image: url(../assets/img/recommendations-icons/walk.svg);
+// }
 
-.recommend_icon.wetclean {
-  width: 37px;
-  height: 37px;
-  background-image: url(../assets/img/recommendations-icons/wet-clearning.svg);
-}
+// .recommend_icon.wetclean {
+//   width: 37px;
+//   height: 37px;
+//   background-image: url(../assets/img/recommendations-icons/wet-clearning.svg);
+// }
 
-.recommend_icon.no-smoke {
-  width: 37px;
-  height: 37px;
-  background-image: url(../assets/img/recommendations-icons/no-smoke.svg);
-}
+// .recommend_icon.no-smoke {
+//   width: 37px;
+//   height: 37px;
+//   background-image: url(../assets/img/recommendations-icons/no-smoke.svg);
+// }
 
-.recommend_icon.keep-kid {
-  background-image: url(../assets/img/recommendations-icons/keep-kid.svg);
-}
+// .recommend_icon.keep-kid {
+//   background-image: url(../assets/img/recommendations-icons/keep-kid.svg);
+// }
 
-.recommend_icon.checkair {
-  width: 37px;
-  height: 37px;
-  background-image: url(../assets/img/recommendations-icons/checkair.svg);
-}
+// .recommend_icon.checkair {
+//   width: 37px;
+//   height: 37px;
+//   background-image: url(../assets/img/recommendations-icons/checkair.svg);
+// }
 
-.recommend_icon.traffic {
-  width: 55px;
-  height: 55px;
-  background-image: url(../assets/img/recommendations-icons/traffic.svg);
-}
+// .recommend_icon.traffic {
+//   width: 55px;
+//   height: 55px;
+//   background-image: url(../assets/img/recommendations-icons/traffic.svg);
+// }
 
-.recommend_icon.indoor {
-  width: 37px;
-  height: 37px;
-  background-image: url(../assets/img/recommendations-icons/indoor.svg);
-}
+// .recommend_icon.indoor {
+//   width: 37px;
+//   height: 37px;
+//   background-image: url(../assets/img/recommendations-icons/indoor.svg);
+// }
 
-.recommend_icon.chemical {
-  width: 37px;
-  height: 37px;
-  background-image: url(../assets/img/recommendations-icons/chemicals.svg);
-}
+// .recommend_icon.chemical {
+//   width: 37px;
+//   height: 37px;
+//   background-image: url(../assets/img/recommendations-icons/chemicals.svg);
+// }
 
-.recommend_texts {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
+// .recommend_texts {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: space-around;
+// }
 
-.recommend_text {
-  font-size: 10px;
-  font-weight: bold;
-  line-height: 12px;
-  text-align: center;
-}
+// .recommend_text {
+//   font-size: 10px;
+//   font-weight: bold;
+//   line-height: 12px;
+//   text-align: center;
+// }
 
 .other_pollutants {
   display: flex;
@@ -2462,83 +2462,83 @@ input[type='radio']:checked:before {
     background-color: #d6b9be;
   }
 
-  #recommended_advice1,
-  #recommended_advice2,
-  #recommended_advice3 {
-    display: flex;
-    flex-direction: row;
-    width: 184px;
-    height: 63px;
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.3);
-    justify-content: center;
-    padding: 15px 10px;
-    padding-right: 5px;
-  }
+  // #recommended_advice1,
+  // #recommended_advice2,
+  // #recommended_advice3 {
+  //   display: flex;
+  //   flex-direction: row;
+  //   width: 184px;
+  //   height: 63px;
+  //   border-radius: 5px;
+  //   background-color: rgba(255, 255, 255, 0.3);
+  //   justify-content: center;
+  //   padding: 15px 10px;
+  //   padding-right: 5px;
+  // }
 
-  #recommended_advice4 {
-    height: 37px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 184px;
-    border-radius: 5px;
-    justify-content: center;
-    padding: 9px 10px;
-    cursor: pointer;
-    background-color: rgba(255, 255, 255, 0.3);
+  // #recommended_advice4 {
+  //   height: 37px;
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   width: 184px;
+  //   border-radius: 5px;
+  //   justify-content: center;
+  //   padding: 9px 10px;
+  //   cursor: pointer;
+  //   background-color: rgba(255, 255, 255, 0.3);
 
-    &.show_other {
-      height: auto;
-      border: 1px solid #fff;
+  //   &.show_other {
+  //     height: auto;
+  //     border: 1px solid #fff;
 
-      .other-pollutants-dropdown {
-        margin-bottom: 15px;
-      }
+  //     .other-pollutants-dropdown {
+  //       margin-bottom: 15px;
+  //     }
 
-      &.green {
-        background-color: #e7f1d2;
-      }
+  //     &.green {
+  //       background-color: #e7f1d2;
+  //     }
 
-      &.yellow {
-        background-color: #f9f3d4;
-      }
+  //     &.yellow {
+  //       background-color: #f9f3d4;
+  //     }
 
-      &.orange {
-        background-color: #fde9d6;
-      }
+  //     &.orange {
+  //       background-color: #fde9d6;
+  //     }
 
-      &.red {
-        background-color: #fbd4d1;
-      }
+  //     &.red {
+  //       background-color: #fbd4d1;
+  //     }
 
-      &.purple {
-        background-color: #eed5f5;
-      }
+  //     &.purple {
+  //       background-color: #eed5f5;
+  //     }
 
-      &.brown {
-        background-color: #e2ced1;
-      }
-    }
+  //     &.brown {
+  //       background-color: #e2ced1;
+  //     }
+  //   }
 
-    span {
-      font-family: 'Open Sans', sans-serif;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 12px;
-      line-height: 16px;
-    }
+  //   span {
+  //     font-family: 'Open Sans', sans-serif;
+  //     font-style: normal;
+  //     font-weight: 600;
+  //     font-size: 12px;
+  //     line-height: 16px;
+  //   }
 
-    // margin-right: 10px;
-  }
+  //   // margin-right: 10px;
+  // }
 
-  .recommend_text {
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 150%;
-    letter-spacing: 0;
-    text-align: unset;
-  }
+  // .recommend_text {
+  //   font-weight: 600;
+  //   font-size: 12px;
+  //   line-height: 150%;
+  //   letter-spacing: 0;
+  //   text-align: unset;
+  // }
 
   #other_air_title {
     display: flex;
