Revert "Map recommendation"

--- a/styles/about-us.scss
+++ b/styles/about-us.scss
@@ -151,8 +151,8 @@ h1.our_team_section_title {
 
     .core_member_info {
       .member_bio {
-        font-size: 12px;
-        margin: 10px 20px 5px 20px;
+        font-size: 14px;
+        margin: 10px 20px;
         color: rgba(44, 45, 65, 0.5);
         height: 170px;
       }
@@ -210,7 +210,7 @@ h1.our_team_section_title {
 
     .member_info {
       margin: 0px 20px 0px 20px;
-      height: 285px;
+      height: 290px;
 
       .member_name {
         font-size: 18px;
