--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 @tailwind base;
 
 /* Write your own custom base styles here */
@@ -371,16 +372,14 @@ p {
   text-decoration: none;
 
   &.big {
-    grid-column:  span 2;
-    grid-row:  span 2;
+    grid-column: span 2;
+    grid-row: span 2;
     width: 100%;
     height: auto;
     overflow: hidden;
 
-
     .take-action-img {
       height: 306px;
-   
     }
 
     .take-action-info {
