--- a/styles/index.scss
+++ b/styles/index.scss
@@ -32,6 +32,20 @@ figure {
 
 /* Your own custom utilities */
 
+/* Policy page list styles - restore default list styling removed by Tailwind reset */
+.policy-list-content {
+  ul {
+    list-style-type: disc;
+    margin-left: 0.5rem;
+    padding-left: 1rem;
+  }
+  
+  li {
+    display: list-item;
+    margin-bottom: 0.5rem;
+  }
+}
+
 .has-text-align-left {
   @apply text-left;
 }
