--- a/styles/index.scss
+++ b/styles/index.scss
@@ -161,6 +161,7 @@ p {
   margin-bottom: 50px;
   min-height: 210px;
   position: relative;
+  background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
 
   .slick-slide {
     height: auto !important;
@@ -173,13 +174,8 @@ p {
   }
 
   .banner_bottom_text_bar {
-    position: absolute;
     width: 100%;
     height: 36px;
-    left: 0;
-    z-index: 9;
-    bottom: 0;
-    background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
     justify-content: center;
     justify-items: center;
   }
@@ -198,6 +194,8 @@ p {
       text-transform: uppercase;
       color: #ffffff;
       align-self: center;
+      max-width: 100%;
+      white-space: nowrap;
 
       &:first-of-type {
         text-align: left;
